# chapter-extractor

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-10-chapter-extractor-design.md
src/chapter_extractor/: __main__.py  chapters.py  cli.py  extractor.py  matcher.py  models.py  naming.py  parser.py
tests/: test_chapters.py  test_cli.py  test_extractor.py  test_matcher.py  test_naming.py  test_parser.py
